homevent (0.2.6) stable; urgency=low

  * Onwards.
  * Add a flag to force reporting Python stack traces
  * Make sure event handlers match on numbers.

 -- Matthias Urlichs <smurf@debian.org>  Tue, 04 Dec 2007 19:49:14 +0100

homevent (0.2.5.6) stable; urgency=low

  * Class name nonsense.

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 03 Dec 2007 23:24:10 +0100

homevent (0.2.5) unstable; urgency=low

  * Added "delta up" to monitor, denoting a counter that doesn't go down
    (if that happens, the delta will be ignored but the counter will still
     be used)
  * Added conditional events

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 03 Dec 2007 06:43:50 +0100

homevent (0.2.4) unstable; urgency=low

  * Fixed packaging.
  * Handle "busy" responses from the OWFS server.
  * Handle OWFS timeouts in non-DIR messages.
  * Use cached version of OWFS for directory scans.
  * Run as a "homevent" user (Debian packaging)
  * Removed the cdbs build system because it's buggy. See debbug 386970:
    calling dh_pysupport *after* dh_installinit is broken
  * Fixed syslogging.
  * Call RRD with specific seconds because it sometimes has problems
    when a datapoint is very close to the next full minute.

 -- Matthias Urlichs <matthias@urlichs.de>  Thu, 22 Nov 2007 00:29:25 +0100

homevent (0.2.3) unstable; urgency=low

  * Started moving to @inlineCallbacks style where appropriate
  * Allow incoming network connections
  * Generate something that looks like a proper Python egg
    and increment the version number

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 19 Nov 2007 08:35:05 +0100

homevent (0.2.2) unstable; urgency=low

  * Found a deadlock
  * cleaned up onewire error handling
  * minor ssh fix
  * show if a monitor is currently hard at work
  * more TODOs. :-/

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 18 Nov 2007 15:23:31 +0100

homevent (0.2.1) unstable; urgency=low

  * Syslog.
