@@ -6,7 +6,7 @@
 #
 
 # Additional options that are passed to the Daemon.
-#DAEMON_OPTS="-l"
+#DAEMON_OPTS="-s"
 #
 # If this file doesn't exist, nothing will happen
 #DAEMON_CFG=/etc/homevent/daemon.he
